5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1756_672.log
== SUBMITION (2019-05-28 16:40:33) 
-- CODE:
 from numpy import *
num = int(input("Numero inteiro: "))
pos = array([1])
v1 = ones(num, dtype=int)

print(v1)se esqueça de incluir o módulo numpy
-- EXECUTION TIME:
0.166254
-- ERROR:
  File "/home/codebench/codes/1756/672/main.py", line 1
    from numpy import *
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:40:43) 
-- CODE:
 from numpy import *
num = int(input("Numero inteiro: "))
pos = array([1])
v1 = ones(num, dtype=int)

print(v1)
-- EXECUTION TIME:
0.287395
-- ERROR:
  File "/home/codebench/codes/1756/672/main.py", line 1
    from numpy import *
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:40:46) 
-- CODE:
 from numpy import *
num = int(input("Numero inteiro: "))
pos = array([1])
v1 = ones(num, dtype=int)

print(v1)
-- EXECUTION TIME:
0.186313
-- ERROR:
  File "/home/codebench/codes/1756/672/main.py", line 1
    from numpy import *
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:41:12) 
-- CODE:

from numpy import *
num = int(input("Numero inteiro: "))
pos = array([1])
v1 = ones(num, dtype=int)

print(v1)
-- EXECUTION TIME:
0.463724
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:49:32) 
-- CODE:
from numpy import *
num = int(input("Numero inteiro: "))
pos = array([1])
v1 = ones(num, dtype=int)

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
